change the encoding to UTF-8

--- a/lesson_1/index.html
+++ b/lesson_1/index.html
@@ -7,16 +7,16 @@
     <body>
 	        <h1>Lesson_1</h1>
 			
-			<h2>Исходный маcсив: <span id=array>[1, 20, 30, "Маня", "Пупкин"]</span></h2>
+			<h2>РСЃС…РѕРґРЅС‹Р№ РјР°cСЃРёРІ: <span id=array>[1, 20, 30, "РњР°РЅСЏ", "РџСѓРїРєРёРЅ"]</span></h2>
 			
-			<p>Использование метода "split" - <span id=arraySplit></span></p>
-			<p>Использование метода "join" - <span id=arrayJoin></span></p>
-			<p>Использование метода "delete" - <span id=arrayDelete></span></p>
-			<p>Использование метода "slice" - <span id=arraySlice></span></p>
-			<p>Использование метода "sort" - <span id=arraySort></span></p>
-			<p>Использование метода "push" - <span id=arrPush></span></p>
-			<p>Использование метода "pop" - <span id=arrPop></span></p>
-			<p>Использование метода "shift" - <span id=arrShift></span></p>
+			<p>РСЃРїРѕР»СЊР·РѕРІР°РЅРёРµ РјРµС‚РѕРґР° "split" - <span id=arraySplit></span></p>
+			<p>РСЃРїРѕР»СЊР·РѕРІР°РЅРёРµ РјРµС‚РѕРґР° "join" - <span id=arrayJoin></span></p>
+			<p>РСЃРїРѕР»СЊР·РѕРІР°РЅРёРµ РјРµС‚РѕРґР° "delete" - <span id=arrayDelete></span></p>
+			<p>РСЃРїРѕР»СЊР·РѕРІР°РЅРёРµ РјРµС‚РѕРґР° "slice" - <span id=arraySlice></span></p>
+			<p>РСЃРїРѕР»СЊР·РѕРІР°РЅРёРµ РјРµС‚РѕРґР° "sort" - <span id=arraySort></span></p>
+			<p>РСЃРїРѕР»СЊР·РѕРІР°РЅРёРµ РјРµС‚РѕРґР° "push" - <span id=arrPush></span></p>
+			<p>РСЃРїРѕР»СЊР·РѕРІР°РЅРёРµ РјРµС‚РѕРґР° "pop" - <span id=arrPop></span></p>
+			<p>РСЃРїРѕР»СЊР·РѕРІР°РЅРёРµ РјРµС‚РѕРґР° "shift" - <span id=arrShift></span></p>
 			
 		<script src="./js/arr.js"></script>
 		
