Created object MyArray, with methods pop(), push(), slice(), join(), reverse(). For test methods is declared the test array: ['a', 'b', 'c', 4, 5, 6]. The method is tested -1. To call the method object "MyArray" in the context of a test array. -2. overridden method prototype array. All results are printed in the console. The numbers added to a prototype method of 'sum' (x.sum(y) === x + y)

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 		<h1>GeekHub_JS_6 (Volodymyr Shcherbyna)</h1>
 		<h2>This is my test page for learn JS</h2>
 		<h2><a href="./lesson_1/index.html">Lesson_1</a></h2>
+		<h2><a href="./lesson_2/index.html">Lesson_2</a></h2>
 	</body>
 </html>
