--- a/lesson_1/index.html
+++ b/lesson_1/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>Lesson_1</title>
     </head>
-    <body>
+    <body>	<h2><a href="../index.html">Return to main pages</a></h2>
 	        <h1>Lesson_1</h1>
 			
 			<h2>Исходный маcсив: <span id=array>[1, 20, 30, "Маня", "Пупкин"]</span></h2>
