--- a/lesson_2/index.html
+++ b/lesson_2/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Lesson 2</title>
 </head>
 <body>
-$END$
+    <h2><a href="../index.html">Return to main pages</a></h2>
+    <p>To view the results in console, click "Ctrl+Shift+J" </p>
+
+    <script src="./js/lesson2.js"></script>
 </body>
 </html>
