Added description on index.html

--- a/lesson_2/index.html
+++ b/lesson_2/index.html
@@ -6,7 +6,8 @@
 </head>
 <body>
     <h2><a href="../index.html">Return to main pages</a></h2>
-    <p>To view the results in console, click "Ctrl+Shift+J" </p>
+    <p>To view the results in console, click "Ctrl+Shift+J"
+        end reload the page (or F5)</p>
 
     <script src="./js/lesson2.js"></script>
 </body>
