Add links on index.html

--- a/lesson_3/index.html
+++ b/lesson_3/index.html
@@ -5,6 +5,7 @@
     <title>Lesson 3</title>
 </head>
 <body>
+    <h1>Lesson 3</h1>
     <h2><a href="../index.html">Return to main pages</a></h2>
     <p>To view the results in console, click "Ctrl+Shift+J"
     end reload the page (or F5)</p>
