added navigation for Tamagotchi and lesson 4

--- a/Tamagochi/index.html
+++ b/Tamagochi/index.html
@@ -5,6 +5,11 @@
     <title>Tamagochi</title>
 </head>
 <body>
- <script src="./js/tamagochi.js"></script>
+    <h1>Tamagochi</h1>
+    <h2><a href="../index.html">Return to main pages</a></h2>
+    <p>To view the results in console, click "Ctrl+Shift+J"
+        end reload the page (or F5)</p>
+
+     <script src="./js/tamagochi.js"></script>
 </body>
 </html>
