--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
 		<h2><a href="./lesson_1/index.html">Lesson_1</a></h2>
 		<h2><a href="./lesson_2/index.html">Lesson_2</a></h2>
 		<h2><a href="./lesson_3/index.html">Lesson_3</a></h2>
+		<h2><a href="./lesson_4/index.html">Lesson_4</a></h2>
+		<h2><a href="./Tamagochi/index.html">Tamagochi</a></h2>
 	</body>
 </html>
