--- a/lesson_4/index.html
+++ b/lesson_4/index.html
@@ -13,6 +13,9 @@
 </head>
 <body>
 
+    <h1>Lesson 4</h1>
+    <h2><a href="../index.html">Return to main pages</a></h2>
+
 <div id="mocha"></div>
 
 <script>
