--- a/lesson_5(todo)/index.html
+++ b/lesson_5(todo)/index.html
@@ -7,10 +7,11 @@
 </head>
 <body>
     <header>
+        <div id="geetHubJS6"></div>
         <h2><a href="../index.html">Return to main pages</a></h2>
-        <h1>Lesson_5</h1>
     </header>
     <main>
+        <h1>Lesson 5</h1>
         <div class="part1"></div>
 
         <div id="list"></div>
@@ -27,6 +28,10 @@
         </div>
 
     </main>
+    <footer>
+        <p>Volodymyr Shcherbyna <a href="mailto:vladimshc@gmail.com">vladimshc@gmail.com</a></p>
+        <p>Learn js 2016-2017</p>
+    </footer>
     <script src="js/todolist.js"></script>
 </body>
 </html>
