Task - 5.2Watter - is DONE

--- a/lesson_5.2/index.html
+++ b/lesson_5.2/index.html
@@ -2,13 +2,30 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Lesson 3</title>
+    <title>Lesson 5.2</title>
+    <link href="./css/style.css" rel="stylesheet" >
 </head>
 <body>
-    <h1>Lesson 5.2</h1>
-    <h2><a href="../index.html">Return to main pages</a></h2>
-    <p>To view the results in console, click "Ctrl+Shift+J"
-    end reload the page (or F5)</p>
+    <header>
+        <div id="geekHubJS6"></div>
+        <h2><a href="../index.html">Return to main pages</a></h2>
+    </header>
+    <main>
+        <h1>Lesson 5.2 Watter</h1>
+
+        <input name="arr" type="text" id="input" value="2,1,5,0,3,4,7,2,3,1,0" placeholder="input array">
+        <button class="btn" onclick="doIt()">doIt</button>
+
+        <p id="arrWatter"></p>
+        <p id="amountWatter"></p>
+
+        <div id="table"></div>
+
+    </main>
+    <footer>
+        <p>Volodymyr Shcherbyna <a href="mailto:vladimshc@gmail.com">vladimshc@gmail.com</a></p>
+        <p>Learn js 2016-2017</p>
+    </footer>
 
 <script src="./js/lesson5.2.js"></script>
 </body>
