--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
 		<h2><a href="./lesson_3/index.html">Lesson_3</a></h2>
 		<h2><a href="./lesson_4/index.html">Lesson_4</a></h2>
 		<h2><a href="./Tamagochi/index.html">Tamagochi</a></h2>
+		<h2><a href="./lesson_5(todo)/index.html">Lesson_5 ToDo List</a></h2>
+		<h2><a href="./lesson_5.2/index.html">Lesson_5.2 Watter</a></h2>
 	</body>
 </html>
