Add links in index.html

--- a/index.html
+++ b/index.html
@@ -14,5 +14,7 @@
 		<h2><a href="./Tamagochi/index.html">Tamagochi</a></h2>
 		<h2><a href="./lesson_5(todo)/index.html">Lesson_5 ToDo List</a></h2>
 		<h2><a href="./lesson_5.2/index.html">Lesson_5.2 Watter</a></h2>
+		<h2><a href="./lesson_6_science_lab/index.html">lesson_6_science_lab</a></h2>
+		<h2><a href="./lesson_6_science_lab_sass/index.html">lesson_6_science_lab_SASS</a></h2>
 	</body>
 </html>
