--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<h2><a href="./lesson_3/index.html">Lesson_3</a></h2>
 		<h2><a href="./lesson_4/index.html">Lesson_4</a></h2>
 		<h2><a href="./Tamagochi/index.html">Tamagochi</a></h2>
-		<h2><a href="./lesson_5(todo)/index.html">Lesson_5 ToDo List</a></h2>
+		<h2><a href="./lesson_5_todoList/index.html">Lesson_5 ToDo List</a></h2>
 		<h2><a href="./lesson_5.2/index.html">Lesson_5.2 Watter</a></h2>
 		<h2><a href="./lesson_6_science_lab/index.html">lesson_6_science_lab</a></h2>
 		<h2><a href="./lesson_6_science_lab_sass/index.html">lesson_6_science_lab_SASS</a></h2>
