Add buttons 'Up', 'Down' (move task in the 'Task list')

--- a/lesson_5_todoList/index.html
+++ b/lesson_5_todoList/index.html
@@ -31,6 +31,8 @@
                 <div class="button_position2">
                     <button class="btn" onclick="taskList()">Task List</button>
                     <button class="btn" onclick="archiveList()">Archive List</button>
+                    <button class="btn" onclick="up()">Up</button>
+                    <button class="btn" onclick="down()">Down</button>
                 </div>
             </div>
         </div>
