Site layout menu on main page

--- a/index.html
+++ b/index.html
@@ -1,20 +1,45 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<title>GeekHub_JS_6</title>
-	</head>
-	<body>
-		<h1>GeekHub_JS_6 (Volodymyr Shcherbyna)</h1>
-		<h2>This is my test page for learn JS</h2>
-		<h2><a href="./lesson_1/index.html">Lesson_1</a></h2>
-		<h2><a href="./lesson_2/index.html">Lesson_2</a></h2>
-		<h2><a href="./lesson_3/index.html">Lesson_3</a></h2>
-		<h2><a href="./lesson_4/index.html">Lesson_4</a></h2>
-		<h2><a href="./Tamagochi/index.html">Tamagochi</a></h2>
-		<h2><a href="./lesson_5_todoList/index.html">Lesson_5 ToDo List</a></h2>
-		<h2><a href="./lesson_5.2/index.html">Lesson_5.2 Watter</a></h2>
-		<h2><a href="./lesson_6_science_lab/index.html">lesson_6_science_lab</a></h2>
-		<h2><a href="./lesson_6_science_lab_sass/index.html">lesson_6_science_lab_SASS</a></h2>
-	</body>
+<head>
+    <meta charset="utf-8">
+    <title>GeekHub_JS_6</title>
+    <meta name="description" content="Volodymyr Shcherbyna test page for learn java script on geekhub">
+    <meta name="keywords" content="Volodymyr, Shcherbyna, geekhub, js, java script, test page, learn">
+    <meta name="robots" content="index, follow">
+    <meta name="author" content="Volodymyr Shcherbyna vladimshc@gmail.com">
+    <link rel="stylesheet" href="./sass/style.css">
+</head>
+<body>
+<header>
+    <a href="http://geekhub.ck.ua/" id="logo"></a>
+</header>
+
+<main>
+    <section id="block-1">
+        <nav class="nav">
+            <ul>
+                <li><a href="./lesson_1/index.html">Lesson 1</a></li>
+                <li><a href="./lesson_2/index.html">Lesson 2</a></li>
+                <li><a href="./lesson_3/index.html">Lesson 3</a></li>
+                <li><a href="./lesson_4/index.html">Lesson 4</a></li>
+                <li><a href="./Tamagochi/index.html">Tamagochi</a></li>
+                <li><a href="./lesson_5_todoList/index.html">Lesson 5 ToDo List</a></li>
+                <li><a href="./lesson_5.2/index.html">Lesson 5.2 Watter</a></li>
+                <li><a href="./lesson_6_science_lab/index.html">lesson 6 science lab</a></li>
+                <li><a href="./lesson_6_science_lab_sass/index.html">lesson 6 science lab SASS</a></li>
+            </ul>
+        </nav>
+    </section>
+    <section id="block-2">
+        <h1>GeekHub JS-6 Volodymyr Shcherbyna</h1>
+        <h2>This is my test project for learn JS</h2>
+    </section>
+</main>
+
+<footer>
+    <p>Volodymyr Shcherbyna <a href="mailto:vladimshc@gmail.com">vladimshc@gmail.com</a></p>
+    <p>Learn js 2016-2017</p>
+</footer>
+
+</body>
 </html>
