add next pages on main

--- a/some_next_page/index-next.html
+++ b/some_next_page/index-next.html
@@ -2,9 +2,82 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Next test page</title>
+    <link rel="stylesheet" href="../sass/style.css">
+
 </head>
 <body>
-$END$
+<header>
+    <a href="http://geekhub.ck.ua/" id="logo"></a>
+</header>
+<!--<li><a href="https://vladimshc.github.io/">Main</a></li>-->
+
+<main>
+    <section id="main-menu">
+        <ul>
+            <li><a href="../index.html">Main page</a></li>
+            <li>
+                <ul>
+                    <li class="lessons">
+                        <a href="#">Lessons</a>
+                        <a href="../lesson_1/index.html">Lesson 1</a>
+                        <a href="../lesson_2/index.html">Lesson 2</a>
+                        <a href="../lesson_3/index.html">Lesson 3</a>
+                        <a href="../lesson_4/index.html">Lesson 4</a>
+                        <a href="../Tamagochi/index.html">Tamagochi</a>
+                        <a href="../lesson_5_todoList/index.html">Lesson 5 ToDo List</a>
+                        <a href="../lesson_5.2/index.html">Lesson 5.2 Watter</a>
+                        <a href="../lesson_6_science_lab/index.html">lesson 6 science lab</a>
+                        <a href="../lesson_6_science_lab_sass/index.html">lesson 6 science lab SASS</a>
+                        <a href="../some_next_page/index-next.html">Some next test page</a>
+                    </li>
+                </ul>
+            <li class="github"><a href="https://github.com/Vladimshc">My github</a></li>
+        </ul>
+
+        <!--<ul>-->
+            <!--<li>-->
+                <!--<a href="../index.html">Main page</a>-->
+                <!--<a href="../lesson_1/index.html">Lesson 1</a>-->
+                <!--<a href="../lesson_2/index.html">Lesson 2</a>-->
+                <!--<a href="../lesson_3/index.html">Lesson 3</a>-->
+                <!--<a href="../lesson_4/index.html">Lesson 4</a>-->
+                <!--<a href="../Tamagochi/index.html">Tamagochi</a>-->
+                <!--<a href="../lesson_5_todoList/index.html">Lesson 5 ToDo List</a>-->
+                <!--<a href="../lesson_5.2/index.html">Lesson 5.2 Watter</a>-->
+                <!--<a href="../lesson_6_science_lab/index.html">lesson 6 science lab</a>-->
+                <!--<a href="../lesson_6_science_lab_sass/index.html">lesson 6 science lab SASS</a>-->
+                <!--<a href="../some_next_page/index-next.html">Some next test page</a>-->
+            <!--</li>-->
+            <!---->
+        <!--</ul>-->
+        
+    </section>
+    <section id="block-1">
+        <nav class="nav">
+            <ul>
+                <li><a href="../lesson_1/index.html">Lesson 1</a></li>
+                <li><a href="../lesson_2/index.html">Lesson 2</a></li>
+                <li><a href="../lesson_3/index.html">Lesson 3</a></li>
+                <li><a href="../lesson_4/index.html">Lesson 4</a></li>
+                <li><a href="../Tamagochi/index.html">Tamagochi</a></li>
+                <li><a href="../lesson_5_todoList/index.html">Lesson 5 ToDo List</a></li>
+                <li><a href="../lesson_5.2/index.html">Lesson 5.2 Watter</a></li>
+                <li><a href="../lesson_6_science_lab/index.html">lesson 6 science lab</a></li>
+                <li><a href="../lesson_6_science_lab_sass/index.html">lesson 6 science lab SASS</a></li>
+                <li><a href="../some_next_page/index-next.html">Some next test page</a></li>
+            </ul>
+        </nav>
+    </section>
+    <section id="block-2">
+        <h1>Some next test page</h1>
+        <h2>This is my test project for learn JS</h2>
+    </section>
+</main>
+
+<footer>
+    <p>Volodymyr Shcherbyna <a href="mailto:vladimshc@gmail.com">vladimshc@gmail.com</a></p>
+    <p>Learn js 2016-2017</p>
+</footer>
 </body>
 </html>
