--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
                 <li><a href="./lesson_5.2/index.html">Lesson 5.2 Watter</a></li>
                 <li><a href="./lesson_6_science_lab/index.html">lesson 6 science lab</a></li>
                 <li><a href="./lesson_6_science_lab_sass/index.html">lesson 6 science lab SASS</a></li>
+                <li><a href="./lesson_6_science_lab_sass/index.html">lesson 6 science lab SASS</a></li>
+                <li><a href="./some_next_page/index-next.html">Some next test page</a></li>
+                <li><a href="./toDoList_JQuery/index.html">toDoList JQuery</a></li>
             </ul>
         </nav>
     </section>
