Implemented dragging tasks list. It needs some work

--- a/toDoList_JQuery/index.html
+++ b/toDoList_JQuery/index.html
@@ -57,8 +57,6 @@
                   </div>
             </div>
         </div>
-
-
     </section>
 </main>
 
@@ -67,7 +65,9 @@
     <p>Learn js 2016-2017</p>
 </footer>
 
-<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+<!--<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>-->
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+<script src="//ajax.aspnetcdn.com/ajax/jquery.ui/1.10.3/jquery-ui.min.js"></script>
 <script src="./js/todolist-jquery.js"></script>
 
 </body>
