fixed local storage

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <li><a href="./lesson_6_science_lab_sass/index.html">lesson 6 science lab SASS</a></li>
                 <li><a href="./lesson_6_science_lab_sass/index.html">lesson 6 science lab SASS</a></li>
                 <li><a href="./some_next_page/index-next.html">Some next test page</a></li>
-                <li><a href="./toDoLDist_JQuery/index.html">toDoList JQuery</a></li>
+                <li><a href="./toDoList_JQuery/index.html">toDoList JQuery</a></li>
                 <li><a href="./barley-break/index.html">Barley-break (Пятнашки)</a></li>
             </ul>
         </nav>
