--- a/toDoList_JQuery/index.html
+++ b/toDoList_JQuery/index.html
@@ -68,6 +68,7 @@
 <!--<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>-->
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script src="//ajax.aspnetcdn.com/ajax/jquery.ui/1.10.3/jquery-ui.min.js"></script>
+<!--<script src="../libs/jquery-3.1.1.js"></script>-->
 <script src="./js/todolist-jquery.js"></script>
 
 </body>
