add 'score', 'new game'

--- a/barley-break/index.html
+++ b/barley-break/index.html
@@ -19,9 +19,16 @@
     <section id="block-2">
         <h1>Barley-break</h1>
         <div class="win"></div>
-        <div class="wrapper-content">
+        <div class="wrapper">
+            <div class="column-1">
+                <div class="content"></div>
+            </div>
+            <div class="column-2">
+                <div class="score">Ходов: <span id="score-id"></span></div>
+                <div class="cheat"><span class="cheat-off"></span>Усилитель мозга</div>
+                <button class="newGame" onclick="newGame()">Новая игра</button>
+            </div>
         </div>
-        <div class="cheat"><span class="cheat-off"></span>Усилитель мозга</div>
     </section>
 </main>
 
