--- a/toDoList_JQuery/index.html
+++ b/toDoList_JQuery/index.html
@@ -51,8 +51,6 @@
                     <button class="btn" onclick="clearCompleted()">Clear completed</button>
                 </div>
                 <div>
-                    <button class="btn">Up??</button>
-                    <button class="btn">Down??</button>
                     <button class="btn" onclick="clearLocalStorage()">Clear local storage</button>
                   </div>
             </div>
@@ -65,10 +63,8 @@
     <p>Learn js 2016-2017</p>
 </footer>
 
-<!--<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>-->
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-<script src="//ajax.aspnetcdn.com/ajax/jquery.ui/1.10.3/jquery-ui.min.js"></script>
-<!--<script src="../libs/jquery-3.1.1.js"></script>-->
+<script src="../libs/jquery_v1.12.4.js"></script>
+<script src="../libs/jquery-ui.min.js"></script>
 <script src="./js/todolist-jquery.js"></script>
 
 </body>
