--- a/toDoList_JQuery/index.html
+++ b/toDoList_JQuery/index.html
@@ -16,24 +16,28 @@
 </header>
 
 <main>
-    <!--<section id="block-1">-->
-        <!--<nav class="nav">-->
-            <!--<ul>-->
-                <!--<li><a href="../lesson_1/index.html">Lesson 1</a></li>-->
-                <!--<li><a href="../lesson_2/index.html">Lesson 2</a></li>-->
-                <!--<li><a href="../lesson_3/index.html">Lesson 3</a></li>-->
-                <!--<li><a href="../lesson_4/index.html">Lesson 4</a></li>-->
-                <!--<li><a href="../Tamagochi/index.html">Tamagochi</a></li>-->
-                <!--<li><a href="../lesson_5_todoList/index.html">Lesson 5 ToDo List</a></li>-->
-                <!--<li><a href="../lesson_5.2/index.html">Lesson 5.2 Watter</a></li>-->
-                <!--<li><a href="../lesson_6_science_lab/index.html">lesson 6 science lab</a></li>-->
-                <!--<li><a href="../lesson_6_science_lab_sass/index.html">lesson 6 science lab SASS</a></li>-->
-                <!--<li><a href="../lesson_6_science_lab_sass/index.html">lesson 6 science lab SASS</a></li>-->
-                <!--<li><a href="../some_next_page/index-next.html">Some next test page</a></li>-->
-                <!--<li><a href="../toDoList_JQuery/index.html">toDoList JQuery</a></li>-->
-            <!--</ul>-->
-        <!--</nav>-->
-    <!--</section>-->
+    <nav id="main-menu">
+        <ul>
+            <li><a href="../index.html">Main page</a></li>
+            <li><a href="#">Lessons pages</a>
+                <ul class="nav-dropdown">
+                    <li><a href="../lesson_1/index.html">Lesson 1</a></li>
+                    <li><a href="../lesson_2/index.html">Lesson 2</a></li>
+                    <li><a href="../lesson_3/index.html">Lesson 3</a></li>
+                    <li><a href="../lesson_4/index.html">Lesson 4</a></li>
+                    <li><a href="../Tamagochi/index.html">Tamagochi</a></li>
+                    <li><a href="../lesson_5_todoList/index.html">Lesson 5 ToDo List</a></li>
+                    <li><a href="../lesson_5.2/index.html">Lesson 5.2 Watter</a></li>
+                    <li><a href="../lesson_6_science_lab/index.html">lesson 6 science lab</a></li>
+                    <li><a href="../lesson_6_science_lab_sass/index.html">lesson 6 science lab SASS</a></li>
+                    <li><a href="../some_next_page/index-next.html">Some next test page</a></li>
+                    <li><a href="../toDoList_JQuery/index.html">toDoList JQuery</a></li>
+                    <li><a href="../barley-break/index.html">Barley-break (Пятнашки)</a></li>
+                </ul>
+            </li>
+            <li><a href="https://github.com/Vladimshc">My github</a></li>
+        </ul>
+    </nav>
     <section id="block-2">
         <h1 id="h11">toDoList JQuery</h1>
         <div class="wrapper-content">
