--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                 <li><a href="./some_next_page/index-next.html">Some next test page</a></li>
                 <li><a href="./toDoList_JQuery/index.html">toDoList JQuery</a></li>
                 <li><a href="./barley-break/index.html">Barley-break (Пятнашки)</a></li>
+                <li><a href="./google_app/index.html">Google map API</a></li>
             </ul>
         </nav>
     </section>
