--- a/slider/index.html
+++ b/slider/index.html
@@ -2,13 +2,13 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>toDoList_JQuery</title>
+    <title>Slider</title>
     <meta name="description" content="Volodymyr Shcherbyna test page for learn java script on geekhub">
     <meta name="keywords" content="Volodymyr, Shcherbyna, geekhub, js, java script, test page, learn">
     <meta name="robots" content="index, follow">
     <meta name="author" content="Volodymyr Shcherbyna vladimshc@gmail.com">
     <link rel="stylesheet" href="../sass/style.css">
-    <link rel="stylesheet" href="./sass/style-todolist-jquery.css">
+    <link rel="stylesheet" type="text/css" href="./sass/styles.css" />
 </head>
 <body>
 <header>
@@ -41,26 +41,16 @@
         </ul>
     </nav>
     <section id="block-2">
-        <h1 id="h11">toDoList JQuery</h1>
-        <div class="wrapper-content">
-            <input name="todo" type="text" id="input" placeholder="Input you task, click 'Add' or press 'Enter'">
-            <button id="add-button" onclick="add()">Add</button>
-
-            <div id="list"></div>
-
-            <div class="wrapper-button">
-                <div class="count"><span id="count-tasks"></span> items left</div>
-                <div class="btn-blok-1">
-                    <button class="btn" onclick="printTasks(true, true)">All</button>
-                    <button class="btn" onclick="printTasks(true, false)">Active</button>
-                    <button class="btn" onclick="printTasks(false, true)">Completed</button>
-                    <button class="btn" onclick="clearCompleted()">Clear completed</button>
-                </div>
-                <div>
-                    <button class="btn" onclick="clearLocalStorage()">Clear local storage</button>
-                  </div>
+        <!--begin slider code-->
+        <div class="wrapper-slider">
+            <div class="slider">
+                <div class="slides-container"></div>
             </div>
+            <button class="btn-move-left" onclick="left()"></button>
+            <button class="btn-move-right" onclick="right()"></button>
+            <div class="dot-container"></div>
         </div>
+        <!--end slider code-->
     </section>
 </main>
 
@@ -69,9 +59,19 @@
     <p>Learn js 2016-2017</p>
 </footer>
 
-<script src="../libs/jquery_v1.12.4.js"></script>
-<script src="../libs/jquery-ui.min.js"></script>
-<script src="./js/todolist-jquery.js"></script>
+<script src="../libs/jquery-3.1.1.js"></script>
+<script src="./js/slider.js"></script>
 
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
