--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                 <li><a href="./barley-break/index.html">Barley-break (Пятнашки)</a></li>
                 <li><a href="./google_app/index.html">Google map API</a></li>
                 <li><a href="./slider/index.html">Slider</a></li>
+                <li><a href="./rssParser/index.html">Rss parser</a></li>
             </ul>
         </nav>
     </section>
