--- a/some_next_page/index-next.html
+++ b/some_next_page/index-next.html
@@ -31,6 +31,7 @@
                     <li><a href="../barley-break/index.html">Barley-break (Пятнашки)</a></li>
                     <li><a href="../google_app/index.html">Google map API</a></li>
                     <li><a href="../slider/index.html">Slider</a></li>
+                    <li><a href="../rssParser/index.html">Rss parser</a></li>
                 </ul>
             </li>
             <li><a href="https://github.com/Vladimshc">My github</a></li>
