--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
 </header>
 
 <main>
+    <nav id="main-menu">
+        <ul>
+            <li><a href="#"></a></li>
+            <li><a href="#"></a></li>
+            <li><a href="https://github.com/Vladimshc">My github</a></li>
+        </ul>
+    </nav>
     <section id="block-1">
         <nav class="nav">
             <ul>
@@ -33,6 +40,7 @@
                 <li><a href="./google_app/index.html">Google map API</a></li>
                 <li><a href="./slider/index.html">Slider</a></li>
                 <li><a href="./rssParser/index.html">Rss parser</a></li>
+                <li><a href="./Pass callbacks/index.html">Pass callbacks</a></li>
             </ul>
         </nav>
     </section>
