--- a/rssParser/index.html
+++ b/rssParser/index.html
@@ -36,6 +36,7 @@
                     <li><a href="../google_app/index.html">Google map API</a></li>
                     <li><a href="../slider/index.html">Slider</a></li>
                     <li><a href="../rssParser/index.html">Rss parser</a></li>
+                    <li><a href="../Pass%20callbacks/index.html">Pass callbacks</a></li>
                 </ul>
             </li>
             <li><a href="https://github.com/Vladimshc">My github</a></li>
